--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>envato</title>
 </head>
 <body>
-    <h1>Mainfjkndjkn</h1>
-    <h2>main</h2>
+<div class="navbar1">
+    <h2>envato market</h2>
+    <button>Buy now</button>
+</div>
 </body>
 </html>
